--- a/pmonitor/templates/pmonitor/index.html
+++ b/pmonitor/templates/pmonitor/index.html
@@ -154,7 +154,7 @@
 </div>
 <div align="center" id="footer">
 <h3>
-	Please send feedback and requests to: <a href="mailto:zhe.li5@non.agilent.com?Subject=Feedback%20on%20Process%20Monitor%20" target="_blank" id="in-mail">
+	Please send feedback and requests to: <a href="mailto:#?Subject=Feedback%20on%20Process%20Monitor%20" target="_blank" id="in-mail">
 	Zhe Li</a> (4U P7, Santa Clara)
 </h3>
 </div>
